[Bug] Fix the issue that style broken on customize theme

--- a/view/frontend/web/css/source/_module.less
+++ b/view/frontend/web/css/source/_module.less
@@ -14,7 +14,7 @@
 	z-index: 9999;
 	padding: 0;
 	width: 60px;
-
+	
 	.social {
 		opacity: 1;
 		-webkit-transform: scale(1) translateY(-90px);
@@ -25,7 +25,7 @@
 		-moz-transition: .5s;
 		-o-transition: .5s;
 		transition: .5s;
-
+		
 		ul.share-list {
 			position: relative;
 			left: 0;
@@ -36,7 +36,7 @@
 			background: #3B5998;
 			padding: 0;
 			list-style: none;
-
+			
 			li {
 				font-size: 20px;
 				cursor: pointer;
@@ -46,29 +46,31 @@
 				text-align: center;
 				float: left;
 				display: block;
-				height: 22px;
+				height: 46px;
+				box-sizing: border-box;
+				-webkit-box-sizing: border-box;
 				transition: width .15s ease-in-out;
-
+				
 				&:hover {
 					color: rgba(0, 0, 0, .5);
 					width: 55px;
 				}
-
+				
 				&[class*="twitter"] {
 					background: #6CDFEA;
 					padding: 12px 0;
 				}
-
+				
 				&[class*="facebook"] {
 					background: #3B5998;
 					padding: 12px 0;
 				}
-
+				
 				&[class*="gplus"] {
 					background: #E34429;
 					padding: 12px 0;
 				}
-
+				
 				&[class*="pinterest"] {
 					background: #CB2027;
 					padding: 12px 0;
